# ReduxScannerEngine

./: .gitignore  CMakeLists.txt  LICENSE_NOTICE.md  README.md  README_RUNTIME.md
rpf_backend_rs/: Cargo.toml
rpf_backend_rs/src/: main.rs
rpf_backend_rs/src/apply/: mod.rs  model.rs  tests.rs  text_apply.rs
rpf_backend_rs/src/codewalker_api/: compat_probe.rs  compat_probe_tests.rs  detect.rs  dry_replace.rs  dry_replace_tests.rs  execution_gate.rs  execution_gate_tests.rs  http_client.rs  http_client_tests.rs  manual_harness.rs  manual_harness_tests.rs  mod.rs  model.rs  post_write_verify.rs  post_write_verify_tests.rs  readiness.rs  readiness_tests.rs  replace_apply.rs  replace_apply_tests.rs  rollback_restore.rs  rollback_restore_tests.rs  search.rs  search_tests.rs  test_run.rs  test_run_tests.rs  test_summary.rs  test_summary_tests.rs  tests.rs
rpf_backend_rs/src/codewalker_strategy/: mod.rs  model.rs  strategy.rs  tests.rs
rpf_backend_rs/src/diff/: mod.rs  model.rs  preview.rs  tests.rs
rpf_backend_rs/src/editors/: dry_run.rs  editor_contract.rs  editor_result.rs  mod.rs  report.rs  tests.rs
rpf_backend_rs/src/export/: bundle.rs  mod.rs  model.rs  tests.rs
rpf_backend_rs/src/inventory/: mod.rs  model.rs  scanner.rs  tests.rs
rpf_backend_rs/src/rpf_adapter/: contract.rs  mod.rs  model.rs  null_adapter.rs  tests.rs
rpf_backend_rs/src/rpf_backup/: backup.rs  mod.rs  model.rs  tests.rs
rpf_backend_rs/src/rpf_compare/: compare.rs  mod.rs  model.rs  tests.rs
rpf_backend_rs/src/rpf_entry_manifest/: manifest.rs  mod.rs  model.rs  tests.rs
(+148 files in other folders)
