[package]
name = "rpf_backend_rs"
version = "0.2.0"
edition = "2021"

[dependencies]
rpf-archive = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
anyhow = "1"
time = { version = "0.3", features = ["formatting"] }
quick-xml = "0.31"
regex = "1"
